<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sensors.SensorsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sensorlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/sensor_chart_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

        </com.github.mikephil.charting.charts.LineChart>

        <Switch
            android:id="@+id/switchMeasurementMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_to_continious_measurement"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSensorValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSensorMesurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mesure_sensor"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
