<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fuctionplot.FunctionPlotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/MP_chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

        </com.github.mikephil.charting.charts.LineChart>

        <EditText
            android:id="@+id/functionInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:hint="@string/input_expression_for_function"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/btnPlotMPchart"
            android:text="@string/input_function"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPlotMPchart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/plot_mp_cart"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>